# sigfig

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.rst  pyproject.toml  setup.py
.github/workflows/: README.md  README.rst  increment_and_publish.yaml  increment_test_publish.yaml  old_python_test.yaml  set_python_version.py  smoke_test.yaml  test.yaml  version.py
doc/: api.rst  conf.py  index.rst  install.rst  requirements.txt  roadmap.rst  usage.rst
sigfig/: __init__.py  sigfig.py
test/: test.py  test_depreciated.csv  test_equality.csv  test_exception.csv  test_warn_unmutable.csv  test_warning.csv
